# research_idea_evaluation

./: "Narrative Disruption Prompting":.json.json  .gitignore  agentic_evaluator_1.py  agentic_evaluator_debate.py  agentic_evaluator_linear.py  agentic_evaluator_single_agent.py  apply_gan_to_notebook.py  config.json  dashboard.py  evaluation_program.ipynb  gan_agents_draft.py  get_list_of_papers.py  metric_form.py  models.py  papers_retrieval.py  prompts.py  pyproject.toml  testing_streamlit.py  tools.py  utils.py
sample_ideas/: agentic_ai_for_idea_generation_ideas.json
streamlit/: secrets.toml
