[project]
name = "evaluation-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "ariq.hadi",email = "ariq.hadi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "semanticscholar (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
