[project]
name = "evaluation-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "ariq.hadi",email = "ariq.hadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "semanticscholar (>=0.11.0,<0.12.0)",
    "langchain_google_genai",
]
